<?xml version="1.0" encoding="utf-8"?>

<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="#373E66"
        tools:context=".AboutActivity">
        <android.support.v7.widget.Toolbar
            android:id="@+id/customToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">
            <ImageView
                android:onClick="backPrevious"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_marginRight="10dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_info"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:gravity="center_horizontal"
                    android:text="About"
                    android:textColor="#fff"
                    android:textSize="16sp" />
            </LinearLayout>


        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView
            android:layout_margin="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_marginTop="15dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/hacker"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="#6200EA"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="monospace"
                    />

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/version"
                    android:textColor="#3F1C01"
                    />
                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/copyright"
                    android:textColor="#3F1C01"
                    />
                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/trademark"
                    android:textColor="#3F1C01"
                    />
                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/email"
                    android:textColor="#3F1C01"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>
