<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dot_back"
    android:padding="10dp"
    tools:context=".RegActivity">

    <LinearLayout
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal">
        <FrameLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/security_black"
                android:layout_gravity="center_horizontal"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eye_black"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                />
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Password"
            android:textSize="18sp"
            android:textColor="#64DD17"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:fontFamily="monospace"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:padding="10dp"
            android:id="@+id/loginInputID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:hint="@string/passinput"
            android:textSize="16sp"
            android:backgroundTint="#CFB7C2"
            android:textColor="#C6EBF5"
            android:textColorHint="#C0EBF1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            />
        <EditText
            android:id="@+id/loginconfirmInputID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:hint="@string/confirmpassinput"
            android:textSize="18sp"
            android:backgroundTint="#CFB7C2"
            android:textColor="#C6EBF5"
            android:textColorHint="#C0EBF1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:padding="10dp"
            />
        <Button
            android:id="@+id/loginButtonID"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/loginEnter"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:background="@drawable/custom_back"
            android:textColor="#fff"
            />
    </LinearLayout>



</LinearLayout>